[gd_scene load_steps=10 format=3 uid="uid://djvtgvpvq3ghv"]

[ext_resource type="Script" path="res://scripts/wand.gd" id="1_ta5gl"]
[ext_resource type="Texture2D" uid="uid://lxxowgei1ngh" path="res://assets/sprites/lofi_char.png" id="2_5asu1"]
[ext_resource type="AudioStream" uid="uid://bflepr80nb34x" path="res://assets/sounds/MagicShoot.ogg" id="3_w8k38"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bdd3x"]
radius = 63.0079

[sub_resource type="AtlasTexture" id="AtlasTexture_c7ssd"]
atlas = ExtResource("2_5asu1")
region = Rect2(96, 208, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_5kmyi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7ssd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_m3k4f"]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wand_sound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i85k0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wand_sound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w2wj0"]
_data = {
"RESET": SubResource("Animation_i85k0"),
"shoot": SubResource("Animation_m3k4f")
}

[node name="Wand" type="Area2D"]
script = ExtResource("1_ta5gl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource("CircleShape2D_bdd3x")

[node name="Pivot" type="Marker2D" parent="."]

[node name="Weapon" type="AnimatedSprite2D" parent="Pivot"]
position = Vector2(2, 0)
scale = Vector2(1.5, 0.5)
sprite_frames = SubResource("SpriteFrames_5kmyi")

[node name="ShootingPoint" type="Marker2D" parent="Pivot/Weapon"]
position = Vector2(4, 0)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="wand_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_w8k38")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w2wj0")
}

[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
